unpackaged/main/default/objects/Evaluation__c/fields/Component_1__c.field-meta.xml
<CustomField>
    <fullName>Component_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Component 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Metric_Definition__c.TEM_Version__c</field>
            <operation>equals</operation>
            <valueField>$Source.TEM_Version__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Metric_Definition__c</referenceTo>
    <relationshipLabel>Evaluations</relationshipLabel>
    <relationshipName>Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>