unpackaged/main/default/objects/Evaluation__c/fields/Definition__c.field-meta.xml
<CustomField>
    <fullName>Definition__c</fullName>
    <label>Definition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>