unpackaged/main/default/objects/Evaluation__c/fields/Dev_Evalutation_Id__c.field-meta.xml
<CustomField>
    <fullName>Dev_Evalutation_Id__c</fullName>
    <label>Dev Evalutation Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>