unpackaged/main/default/objects/Evaluation__c/fields/Evaluation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Notes__c</fullName>
    <label>Evaluation Notes</label>
    <type>TextArea</type>
</CustomField>