unpackaged/main/default/objects/Evaluation__c/fields/Group_1__c.field-meta.xml
<CustomField>
    <fullName>Group_1__c</fullName>
    <label>Group 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Group_for_Evaluation</valueSetName>
    </valueSet>
</CustomField>