unpackaged/main/default/objects/Evaluation__c/fields/Imp_Phase__c.field-meta.xml
<CustomField>
    <fullName>Imp_Phase__c</fullName>
    <label>Imp Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset Build</fullName>
            </value>
            <value>
                <fullName>Drive Config</fullName>
            </value>
            <value>
                <fullName>Interface Build (WAN)</fullName>
            </value>
            <value>
                <fullName>Interface Build (LAN)</fullName>
            </value>
            <value>
                <fullName>SAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>