unpackaged/main/default/objects/Evaluation__c/fields/Operand_1__c.field-meta.xml
<CustomField>
    <fullName>Operand_1__c</fullName>
    <label>Operand 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&lt;&gt;</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>=</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>