unpackaged/main/default/objects/Evaluation__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drive</fullName>
            </value>
            <value>
                <fullName>Drive Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>