unpackaged/main/default/objects/Evaluation__c/fields/Prompt_Information__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Information__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Prompt Information</label>
    <referenceTo>Prompt_Information__c</referenceTo>
    <relationshipLabel>Evaluations</relationshipLabel>
    <relationshipName>Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>