unpackaged/main/default/objects/Evaluation__c/fields/Renewable__c.field-meta.xml
<CustomField>
    <fullName>Renewable__c</fullName>
    <label>Renewable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solar - PV</fullName>
            </value>
            <value>
                <fullName>Wind - Onshore</fullName>
            </value>
            <value>
                <fullName>Wind - Offshore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>