unpackaged/main/default/objects/Evaluation__c/fields/Result_Component_2__c.field-meta.xml
<CustomField>
    <fullName>Result_Component_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Result Component 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Metric_Definition__c.TEM_Version__c</field>
            <operation>equals</operation>
            <valueField>$Source.TEM_Version__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Metric_Definition__c</referenceTo>
    <relationshipLabel>Evaluations (Result Component 2)</relationshipLabel>
    <relationshipName>Evaluations4</relationshipName>
    <type>Lookup</type>
</CustomField>