unpackaged/main/default/objects/Evaluation__c/fields/RFI_Category__c.field-meta.xml
<CustomField>
    <fullName>RFI_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFI Category</label>
    <referenceTo>RFI_Categories__c</referenceTo>
    <relationshipLabel>Evaluations</relationshipLabel>
    <relationshipName>Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>