unpackaged/main/default/objects/Evaluation__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Feature</fullName>
            </value>
            <value>
                <fullName>Plant</fullName>
            </value>
            <value>
                <fullName>Weather Station</fullName>
            </value>
            <value>
                <fullName>Solar - PV</fullName>
            </value>
            <value>
                <fullName>Wind - Onshore</fullName>
            </value>
            <value>
                <fullName>Wind - Offshore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>