unpackaged/main/default/objects/Evaluation__c/fields/TEM_Version__c.field-meta.xml
<CustomField>
    <fullName>TEM_Version__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>TEM Version</label>
    <referenceTo>TEM_Version__c</referenceTo>
    <relationshipLabel>Evaluations</relationshipLabel>
    <relationshipName>Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>