unpackaged/main/default/objects/Evaluation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Alias__c</columns>
    <columns>Renewable__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>